<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_rtls</name>
  <version>1.3.2</version>
  <description>A package containing scripts for rtls </description>
  <author email= "youliang@openrobotics.org">Grey</author>
  <maintainer email="youliang@openrobotics.org">You Liang</maintainer>
  <license>Apache Licence 2.0</license>

  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_api_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
